objects/Copado_Usage__c.object
<CustomObject>
    <description>This object contain aggregated information about Copado package usage. It&apos;s loaded through an integration therefore it cannot be renamed nor any of its fields.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Commits__c</fullName>
        <label>New Commits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Deployments__c</fullName>
        <label>New Deployments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Promotions__c</fullName>
        <label>New Promotions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_User_Stories__c</fullName>
        <label>New User Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Org</label>
        <referenceTo>Salesforce_Org__c</referenceTo>
        <relationshipLabel>Copado Usage</relationshipLabel>
        <relationshipName>Copado_Usage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Activity__c</fullName>
        <label>Total Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Users__c</fullName>
        <label>Unique Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Copado Usage</label>
    <nameField>
        <label>Copado Usage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Usage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>